--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/pelevesque/scale-number.git"
   },
   "keywords": [
+    "math",
     "number",
     "scale",
     "range"
